# fiducial_slam

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: board_config.yaml  class.drawio  config.yaml  navigation_system_config.yaml
config/cameraConfigs/: asusZenBookCamera.yaml  gazeboCamWheelPlatform.yaml  ocamFIsheyeConfig.yaml  ocamFIsheyeConfig2.yaml  ost.yaml  rpiFIsheyeConfig.yaml  telloCamera.yaml
config/cameraConfigs/calibrationData/: ocam_calib.yaml
config/fiducialBoards/: board.yaml  board_1.yaml  board_2.yaml  board_3.yaml  single_marker.yaml
config/fiducialDetectorConfigs/: dictionaryConfigARUCO.yaml
config/navSysConfig/: arucoNav.congig.yaml
examples/: CMakeLists.txt  fiducial_detector_example.cpp  fiducial_navigation_example.cpp  fiducial_slam_example.cpp  get_image_from_source_example.cpp  optical_flow_nav_example.cpp  test.cpp  visual_navigation_example.cpp
inc/: config.hpp  types.hpp
include/: arucoCustomTools.hpp  aruco_custom_tools.hpp  config.hpp  customBoard.hpp  cvMathOperations.hpp  fiducialDetector.hpp  fiducialMap.hpp  fuducialNavigationSystem.hpp  markerMap.hpp  mathOperations.hpp  navigationSystem.hpp  opticalFlowNavigationSystem.hpp  sendPoseDataUDP.h  types.hpp  vision_systems.hpp  visualNavigationInterface.hpp  visualNavigationSystem.hpp  visualSystem.hpp  visualizationOnImage.hpp
src/: arucoCustomTools.cpp  aruco_custom_tools.cpp  customBoard.cpp  cvMathOperations.cpp  fiducialDetector.cpp  fuducialNavigationSystem.cpp  markerMap.cpp  mathOperations.cpp  motion_blur_remove_test.cpp  navigationSystem.cpp  opticalFlowNavigationSystem.cpp  sendPoseDataUDP.c  video_cap.cpp  vision_systems.cpp  visualNavigationInterface.cpp  visualNavigationSystem.cpp  visualSystem.cpp  visualizationOnImage.cpp
src/common_tools/: CMakeLists.txt  MathOperations.cpp  MathOperations.hpp
src/cv_tools/: ArucoCustomTools.cpp  ArucoCustomTools.hpp  CMakeLists.txt  CVMathOperations.cpp  CVMathOperations.hpp  VisualizationOnImage.cpp  VisualizationOnImage.hpp
src/fiducial_navigation/: ANavigationSystem.cpp  ANavigationSystem.hpp  CMakeLists.txt  CustomMultipleBoard.cpp  CustomMultipleBoard.hpp  FiducialDetector.cpp  FiducialDetector.hpp  FiducialMap.hpp  FiducialNavigationSystem.cpp  FiducialNavigationSystem.hpp
src/visual_system/: CMakeLists.txt  VisionSystem.cpp  VisionSystem.hpp  VisualNavigation.cpp  VisualNavigation.hpp
